--- a/tests/Tests_debug.ipynb
+++ b/tests/Tests_debug.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,8 +13,92 @@
     "\n",
     "sys.path.append(src_path)\n",
     "from hydroponics.Basic_functions import *\n",
-    "from hydroponics.Solutions_Solubility import plot_graph, analyse_nutriments"
+    "from hydroponics.Solutions_Solubility import *\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reload_module(module_name):\n",
+    "    import importlib\n",
+    "    module = importlib.import_module(module_name)\n",
+    "    importlib.reload(module)\n",
+    "\n",
+    "# Usage\n",
+    "Basic_functions = reload_module('hydroponics.Basic_functions')\n",
+    "Solutions_Solubility = reload_module('hydroponics.Solutions_Solubility')\n",
+    "\n",
+    "from hydroponics.Basic_functions import *\n",
+    "from hydroponics.Solutions_Solubility import *\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'NH4+': 0.001, 'K+': 0.0065, 'Ca(2+)': 0.00625, 'Mg(2+)': 0.001, 'NO3(-)': 0.01175, 'SO4(2-)': 0.001, 'H2PO4(-)': 0.00125, 'Si': 0.00075, 'Fe': 1.4999999999999999e-05, 'Mn': 9.999999999999999e-06, 'Zn': 4.9999999999999996e-06, 'B': 2.4999999999999998e-05, 'Cu(2+)': 7.5e-07, 'Mo': 5e-07}\n",
+      "{'NH4+': 0.01804, 'K+': 0.254137, 'Ca(2+)': 0.09018, 'Mg(2+)': 0.036457500000000004, 'NO3(-)': 0.72855875, 'SO4(2-)': 0.1085478, 'H2PO4(-)': 0.09698699999999999, 'Si': 0.0, 'Fe': 0.0008376749999999999, 'Mn': 0.00054938, 'Zn': 0.0003268999999999999, 'B': 0.00027054999999999994, 'Cu(2+)': 4.76595e-05, 'Mo': 4.798e-05}\n",
+      "{'Na+': 0.1, 'Cl-': 0.2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Testing importing data\n",
+    "dict = predefined_solutions(\"Cucumber\", \"mol\")\n",
+    "print(dict)\n",
+    "dict2 = import_solution_data('Example_solution')\n",
+    "print(dict2)\n",
+    "dict3 = import_plant_data('Example_plant')\n",
+    "print(dict3)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "164.086\n",
+      "1611.9563090574927\n",
+      "8.62890625e-07\n",
+      "{'K+': 39.0983, 'Cl-': 70.9, 'Na+': 22.98976928}\n",
+      "{'NaCl': 0.508398049308305, 'MnCl2': 0.162581244147043}\n"
+     ]
+    }
+   ],
+   "source": [
+    "mol = 'Ca(NO3)2'\n",
+    "mass = get_molar_mass(mol)\n",
+    "print(mass)\n",
+    "Ksp = get_Ksp(mol)\n",
+    "print(Ksp)\n",
+    "\n",
+    "Q = get_Q_solubility(mol, dict)\n",
+    "print(Q)\n",
+    "print(salt2ions({\"KCl\":1,\"NaCl\":1}, unit = 'g'))\n",
+    "\n",
+    "dict4 = make_solution(dict3, [\"Br-\"], 2 )\n",
+    "print(dict4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
