--- a/tests/debug_notebook.ipynb
+++ b/tests/debug_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,6 +18,59 @@
     "from hydroponics.PH_Approximation_0 import *\n",
     "from hydroponics.pH_graph_0 import *\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[True, 100, None]\n"
+     ]
+    }
+   ],
+   "source": [
+    "solution = {\"NaCl\":0.1, \"KNO3\": 0.05}\n",
+    "plant = {\"Na+\": 0.6, \"Cl-\": 0.9, \"K+\": 0.8, \"NO3(-)\": 0.7}\n",
+    "growth_time = 100\n",
+    "volume = 2\n",
+    "print(analyse_nutriments(solution, plant, growth_time, volume))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.76904463917891\n",
+      "2.758051364759525\n",
+      "810.1350827255483\n",
+      "37.716373801958376\n",
+      "21.04634685946477\n",
+      "398.49994656470716\n",
+      "1.0339299769044514\n",
+      "2072.3420181206798\n",
+      "11.330982570493006\n",
+      "1210.091270423005\n",
+      "754.4989632174183\n",
+      "0\n",
+      "3759.188606917454\n"
+     ]
+    }
+   ],
+   "source": [
+    "list = ['KNO3', 'KH2PO4', 'MnCl2', 'NaCl', 'KCl', 'KOH', 'K2SO4', 'K2CO3', 'KHCO3', 'CaCl2', 'MgCl2', 'FeCl3', 'AlCl3', 'KBr']\n",
+    "Ksp_list = [9.76904463917891, 2.758051364759525, 810.1350827255483, 6.141365792880145, 21.04634685946477, 398.49994656470716, 1.0339299769044514, 2072.3420181206798, 11.330982570493006, 1210.091270423005, 754.4989632174183, 0, 3759.188606917454, 30.110339484562]\n",
+    "for i in range(len(list)-1):\n",
+    "    print(get_Ksp(list[i]))"
    ]
   },
   {
