--- a/tests/debug_notebook.ipynb
+++ b/tests/debug_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,13 +22,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reload_module(module_name):\n",
+    "    import importlib\n",
+    "    module = importlib.import_module(module_name)\n",
+    "    importlib.reload(module)\n",
+    "\n",
+    "# Usage\n",
+    "Basic_functions = reload_module('hydroponics.Basic_functions')\n",
+    "Solutions_Solubility = reload_module('hydroponics.Solutions_Solubility')\n",
+    "Generate_Report = reload_module('hydroponics.Generate_Report')\n",
+    "pH = reload_module('hydroponics.PH_Approximation_0')\n",
+    "pH_graphic = reload_module('hydroponics.pH_graph_0')\n",
+    "\n",
+    "from hydroponics.Basic_functions import *\n",
+    "from hydroponics.Solutions_Solubility import *\n",
+    "from hydroponics.Generate_Report import *\n",
+    "from hydroponics.PH_Approximation_0 import *\n",
+    "from hydroponics.pH_graph_0 import *    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "C:\\Users\\nilst\\Documents\\EPFL\\BA_4\\ppchem\\Project\\Project_ppchem\\src\\hydroponics\\data\\molar_mass.csv\n",
+      "C:\\Users\\nilst\\Documents\\EPFL\\BA_4\\ppchem\\Project\\Project_ppchem\\src\\hydroponics\\data\\molar_mass.csv\n",
+      "C:\\Users\\nilst\\Documents\\EPFL\\BA_4\\ppchem\\Project\\Project_ppchem\\src\\hydroponics\\data\\molar_mass.csv\n",
+      "C:\\Users\\nilst\\Documents\\EPFL\\BA_4\\ppchem\\Project\\Project_ppchem\\src\\hydroponics\\data\\molar_mass.csv\n",
+      "C:\\Users\\nilst\\Documents\\EPFL\\BA_4\\ppchem\\Project\\Project_ppchem\\src\\hydroponics\\data\\molar_mass.csv\n",
+      "C:\\Users\\nilst\\Documents\\EPFL\\BA_4\\ppchem\\Project\\Project_ppchem\\src\\hydroponics\\data\\molar_mass.csv\n",
+      "C:\\Users\\nilst\\Documents\\EPFL\\BA_4\\ppchem\\Project\\Project_ppchem\\src\\hydroponics\\data\\molar_mass.csv\n",
+      "C:\\Users\\nilst\\Documents\\EPFL\\BA_4\\ppchem\\Project\\Project_ppchem\\src\\hydroponics\\data\\molar_mass.csv\n",
+      "C:\\Users\\nilst\\Documents\\EPFL\\BA_4\\ppchem\\Project\\Project_ppchem\\src\\hydroponics\\data\\molar_mass.csv\n",
+      "C:\\Users\\nilst\\Documents\\EPFL\\BA_4\\ppchem\\Project\\Project_ppchem\\src\\hydroponics\\data\\molar_mass.csv\n",
+      "C:\\Users\\nilst\\Documents\\EPFL\\BA_4\\ppchem\\Project\\Project_ppchem\\src\\hydroponics\\data\\molar_mass.csv\n",
+      "C:\\Users\\nilst\\Documents\\EPFL\\BA_4\\ppchem\\Project\\Project_ppchem\\src\\hydroponics\\data\\molar_mass.csv\n",
+      "C:\\Users\\nilst\\Documents\\EPFL\\BA_4\\ppchem\\Project\\Project_ppchem\\src\\hydroponics\\data\\molar_mass.csv\n",
+      "C:\\Users\\nilst\\Documents\\EPFL\\BA_4\\ppchem\\Project\\Project_ppchem\\src\\hydroponics\\data\\molar_mass.csv\n",
+      "C:\\Users\\nilst\\Documents\\EPFL\\BA_4\\ppchem\\Project\\Project_ppchem\\src\\hydroponics\\data\\molar_mass.csv\n",
+      "C:\\Users\\nilst\\Documents\\EPFL\\BA_4\\ppchem\\Project\\Project_ppchem\\src\\hydroponics\\data\\molar_mass.csv\n",
+      "C:\\Users\\nilst\\Documents\\EPFL\\BA_4\\ppchem\\Project\\Project_ppchem\\src\\hydroponics\\data\\molar_mass.csv\n",
+      "C:\\Users\\nilst\\Documents\\EPFL\\BA_4\\ppchem\\Project\\Project_ppchem\\src\\hydroponics\\data\\molar_mass.csv\n",
+      "C:\\Users\\nilst\\Documents\\EPFL\\BA_4\\ppchem\\Project\\Project_ppchem\\src\\hydroponics\\data\\molar_mass.csv\n",
+      "C:\\Users\\nilst\\Documents\\EPFL\\BA_4\\ppchem\\Project\\Project_ppchem\\src\\hydroponics\\data\\molar_mass.csv\n",
       "[True, 100, None]\n"
      ]
     }
@@ -110,28 +155,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def reload_module(module_name):\n",
-    "    import importlib\n",
-    "    module = importlib.import_module(module_name)\n",
-    "    importlib.reload(module)\n",
-    "\n",
-    "# Usage\n",
-    "Basic_functions = reload_module('hydroponics.Basic_functions')\n",
-    "Solutions_Solubility = reload_module('hydroponics.Solutions_Solubility')\n",
-    "Generate_Report = reload_module('hydroponics.Generate_Report')\n",
-    "pH = reload_module('hydroponics.PH_Approximation_0')\n",
-    "pH_graphic = reload_module('hydroponics.pH_graph_0')\n",
-    "\n",
-    "from hydroponics.Basic_functions import *\n",
-    "from hydroponics.Solutions_Solubility import *\n",
-    "from hydroponics.Generate_Report import *\n",
-    "from hydroponics.PH_Approximation_0 import *\n",
-    "from hydroponics.pH_graph_0 import *    \n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -312,7 +339,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
