Final final final version

--- a/notebooks/project_report.ipynb
+++ b/notebooks/project_report.ipynb
@@ -371,11 +371,7 @@
     "    For get_Ksp, the function computed the equilibrium constant from a database of solubilities [g/100mL]. \n",
     "    This database in provided within the packge (solubilities_data.csv file) adn was scriped from a Wikipeida website (see README)\n",
     "    <br><br>\n",
-    "    In order to convert g --> mol, a built-in molar mass calculator was used. This function uses a CVS file containing atom masses to compute the molecular mass based on some selection rules.\n",
-    "\n",
-    "\n",
-    "\n",
-    "<div style=\"font-size: 16px;\">"
+    "    In order to convert g --> mol, a built-in molar mass calculator was used. This function uses a CVS file containing atom masses to compute the molecular mass based on some selection rules."
    ]
   },
   {
@@ -450,14 +446,10 @@
     "\n",
     "  </p>\n",
     "</div>\n",
-    "\n",
-    "</div>\n",
     "<br>\n",
     "  <img src=\"Ion_concentrations2.jpg\" alt=\"\" width=\"400\" height=\"200\"><br><br>\n",
     "\n",
-    "  <img src=\"Ion_concentrations2.jpg\" alt=\"\" width=\"400\" height=\"200\"><br>\n",
-    "\n",
-    "  <p style=\"font-family: 'Baskerville Old Face', 'Times New Roman', Times, serif; font-size: 22px;\">"
+    "  <img src=\"Ion_concentrations2.jpg\" alt=\"\" width=\"400\" height=\"200\"><br>"
    ]
   },
   {
