Final final final version

--- a/notebooks/project_report.ipynb
+++ b/notebooks/project_report.ipynb
@@ -285,7 +285,7 @@
     "    <br>\n",
     "    Finally the list filtered to keep N salts, where all the ions are represented. \n",
     "    The system is set up and is first solved for positive solutions. If sympy doesn't find positive solutions, all solutions are tried and if still no solution is found, a Value error is raised.\n",
-    "\n",
+    "  </p>\n",
     "<div style=\"font-size: 16px;\">"
    ]
   },
@@ -371,7 +371,9 @@
     "    For get_Ksp, the function computed the equilibrium constant from a database of solubilities [g/100mL]. \n",
     "    This database in provided within the packge (solubilities_data.csv file) adn was scriped from a Wikipeida website (see README)\n",
     "    <br><br>\n",
-    "    In order to convert g --> mol, a built-in molar mass calculator was used. This function uses a CVS file containing atom masses to compute the molecular mass based on some selection rules."
+    "    In order to convert g --> mol, a built-in molar mass calculator was used. This function uses a CVS file containing atom masses to compute the molecular mass based on some selection rules.\n",
+    "  </p>\n",
+    "</div>"
    ]
   },
   {
@@ -388,8 +390,9 @@
     "<br>\n",
     "<br>\n",
     "In the end, this function was found to work quite well if the salt was provided in the database.\n",
+    "</p>\n",
     "</div>\n",
-    "  </p>\n"
+    "  \n"
    ]
   },
   {
@@ -446,7 +449,7 @@
     "\n",
     "  </p>\n",
     "</div>\n",
-    "<br>\n",
+    "\n",
     "  <img src=\"Ion_concentrations2.jpg\" alt=\"\" width=\"400\" height=\"200\"><br><br>\n",
     "\n",
     "  <img src=\"Ion_concentrations2.jpg\" alt=\"\" width=\"400\" height=\"200\"><br>"
@@ -470,7 +473,7 @@
     "    For generate_report, the main difficulty was the use reportlab which was confusing in the beginning.\n",
     "    <br>\n",
     "    Then another difficuty is the time it takes for a PDF to be generated (around 20 seconds). \n",
-    "\n",
+    "  </p>\n",
     "<div style=\"font-size: 16px;\">"
    ]
   },
