Final final final version

--- a/notebooks/project_report.ipynb
+++ b/notebooks/project_report.ipynb
@@ -286,7 +286,7 @@
     "    Finally the list filtered to keep N salts, where all the ions are represented. \n",
     "    The system is set up and is first solved for positive solutions. If sympy doesn't find positive solutions, all solutions are tried and if still no solution is found, a Value error is raised.\n",
     "  </p>\n",
-    "<div style=\"font-size: 16px;\">"
+    "</div>"
    ]
   },
   {
@@ -448,11 +448,12 @@
     "  --> See the concentrations figure below\n",
     "\n",
     "  </p>\n",
-    "</div>\n",
     "\n",
-    "  <img src=\"Ion_concentrations2.jpg\" alt=\"\" width=\"400\" height=\"200\"><br><br>\n",
+    "<img src=\"Ion_concentrations2.jpg\" alt=\"\" width=\"400\" height=\"200\"><br><br>\n",
     "\n",
-    "  <img src=\"Ion_concentrations2.jpg\" alt=\"\" width=\"400\" height=\"200\"><br>"
+    "<img src=\"Ion_concentrations2.jpg\" alt=\"\" width=\"400\" height=\"200\"><br>\n",
+    "\n",
+    "</div>\n"
    ]
   },
   {
@@ -474,7 +475,7 @@
     "    <br>\n",
     "    Then another difficuty is the time it takes for a PDF to be generated (around 20 seconds). \n",
     "  </p>\n",
-    "<div style=\"font-size: 16px;\">"
+    "</div>"
    ]
   },
   {
